@@ -1,7 +1,13 @@
 2005-11-15  Werner Koch  <wk@g10code.com>
 
+	* src/Makefile.am (EXTRA_DIST): Add g4wihelp.nsi.
+	(CLEANFILES): Add g4wihelp.dll.
+
 	* src/inst-gpgee.nsi: Use RegDLL and UnRegDLL.  Print warning on
 	registration failure.  Use move approach for active extension.
+	* src/inst-gpgol.nsi: Ditto.
+	* src/uninst-gpgol.nsi: Use UnRegDLL and allow rebooting.
+	* src/uninst-gpgee.nsi: Ditto.
 
 	* src/installer.nsi: Moved inclusion of g4wihelp.nsi after the
 	language definitions.
